/survey?user_id={id} don`t return answers by user id